--- a/Gun_Violence_in_the_United_States.ipynb
+++ b/Gun_Violence_in_the_United_States.ipynb
@@ -97,6 +97,31 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jf-QvAbMKY_b",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Datasets and Sources\n",
+        "**1. Mass Shootings Data from Gun Violence Archive**: The dataset consists of gun violence incidents collected from Jan 01, 2013 to May 18, 2019. Each row of the dataset represents an incident in the United States with details regarding the incident location and number of people killed and injured. Source: https://www.gunviolencearchive.org/\n",
+        "\n",
+        "**2. City Locations Data from Opensoft**: The dataset consists of US cities and their geographical locations. Each row represents a city and its geographical coordinates and details like population, timezone, etc. Source: https://public.opendatasoft.com/explore/dataset/1000-largest-us-cities-by-population-with-geographic-coordinates/table/?sort=-rank\n",
+        "\n",
+        "**Variables of Interest:**\n",
+        "    <ul>\n",
+        "      <li><i>Incident Date</i>: The date of the mass shooting incident</li>\n",
+        "      <li><i>State</i>: State where the mass shooting incident took place</li>\n",
+        "      <li><i>City</i>: City where the mass shooting incident took place</li>\n",
+        "      <li><i>Address</i>: Address where the mass shooting incident took place</li>\n",
+        "      <li><i>num_Killed</i>: Number of people killed in the mass shooting incident</li>\n",
+        "      <li><i>num_Injured</i>: Number of people injured in the mass shooting incident</li>\n",
+        "      <li><i>Latitude</i>: Latitude of the given city</li>\n",
+        "      <li><i>Longitude</i>: Longitude of the given city</li>\n",
+        "    </ul>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
@@ -155,7 +180,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "Td0zRLyCOqzv",
-        "outputId": "a73804c8-13fc-4059-db39-9fa02d8c70e6",
+        "outputId": "84fdbf90-5d62-4c18-aace-0c655491c2ce",
         "scrolled": true,
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -170,7 +195,7 @@
         "y2017 = pd.read_csv(dataset_url+\"Mass%20Shootings%20year%20wise/Mass_Shootings_2017.csv\")\n",
         "y2018 = pd.read_csv(dataset_url+\"Mass%20Shootings%20year%20wise/Mass_Shootings_2018.csv\")\n",
         "y2019 = pd.read_csv(dataset_url+\"Mass%20Shootings%20year%20wise/Mass_Shootings_2019.csv\")\n",
-        "# combining data for al the years \n",
+        "# combining data for all the years \n",
         "mass_shoot = pd.concat([y2013, y2014, y2015, y2016, y2017, y2018, y2019])\n",
         "mass_shoot.head()"
       ],
@@ -345,7 +370,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "0AURVzy8JMRA",
-        "outputId": "a8ebbbdd-ed04-4840-90d4-5bebe8b804da",
+        "outputId": "ca85de8f-36d5-47e2-9b32-e499ffd2bd80",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -490,7 +515,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "VOwaorUIJMRO",
-        "outputId": "22b63830-ebd2-4de8-c89f-0d09faa1bfe2",
+        "outputId": "37c99612-01fb-4b1a-9a63-dc50003fdc94",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -534,11 +559,11 @@
         "scrolled": true,
         "id": "L9Wl6ZPc_sZ7",
         "colab_type": "code",
+        "outputId": "346452ec-d37e-4540-bc52-700fdcee2993",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        },
-        "outputId": "8ee0fd7b-45e4-48be-b48e-e00847a59173"
+        }
       },
       "source": [
         "mass_shooting_data.head()"
@@ -692,11 +717,11 @@
       "metadata": {
         "id": "XlJLNUww_saE",
         "colab_type": "code",
+        "outputId": "56083648-f142-4567-e5ea-8d7d55828db4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 254
-        },
-        "outputId": "e9716b15-7967-437f-e01a-0686a5bc54a4"
+        }
       },
       "source": [
         "mass_shooting_data.groupby('Year')['num_Killed'].sum()\\\n",
@@ -803,11 +828,11 @@
       "metadata": {
         "id": "UpeyRbkz_saL",
         "colab_type": "code",
+        "outputId": "ef5e38c6-fed9-4031-93bf-ea70d654cb4e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        },
-        "outputId": "f2ccd689-0ccb-4c26-d1d0-25a8448fb863"
+        }
       },
       "source": [
         "mass_shooting_data.groupby('City')['num_Killed','num_Injured'].sum()\\\n",
@@ -898,11 +923,11 @@
       "metadata": {
         "id": "aUn7evJV_saR",
         "colab_type": "code",
+        "outputId": "78acffdb-fa65-49ef-e57b-bb1e3ddcac86",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1438
-        },
-        "outputId": "f77208ed-6629-4473-c162-19c2278b496a"
+        }
       },
       "source": [
         "mass_shooting_data.groupby('State')['num_Killed','num_Injured'].agg(['sum','count','mean','max'])"
@@ -1564,6 +1589,46 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "MNqgCpMPMYzQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "With less than 5% of the world’s population, the United States is home to roughly 35–50 per cent of the world’s civilian-owned guns, heavily skewing the global geography of firearms and any relative comparison. (Ref: https://www.theguardian.com/news/datablog/2012/jul/22/gun-homicides-ownership-world-list)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nktknL6lMjEl",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Datasets and  Sources\n",
+        "**1. Gun Homicides and Gun Ownership Data from Guardian**: This dataset consists of firearms related murders and ownership details by country. Each row represents a country and details like average firearms per 100 people, total firearms owned by civilians, etc. Source: https://www.theguardian.com/news/datablog/2012/jul/22/gun-homicides-ownership-world-list#data)\n",
+        "\n",
+        "**2. Developed Countries 2019 Data from World Population Review**: This dataset is a list of developed countries in the world ranked according to their growth rate and population. Source: http://worldpopulationreview.com/countries/developed-countries/\n",
+        "\n",
+        "**Variables of interest**\n",
+        "    <ul>\n",
+        "      <li><i>Country</i>: Name of the country </li>\n",
+        "      <li><i>% of homicides by firearm</i>: Percentage of homicides due to firearms</li>\n",
+        "      <li><i>Homicide by firearm rate per 100,000 pop</i>: Number of homicides happened using firearms per 100,000  </li>\n",
+        "      <li><i>Address</i>: Address where the mass shooting incidence took place</li>\n",
+        "      <li><i>Average total all civilian firearm</i>: Average number of firearms held by civilians</li>\n",
+        "      <li><i>Growth Rate</i>: The rate at which a country is growing according to CIA</li>\n",
+        "    </ul>\n",
+        "    \n",
+        "**Limitations**\n",
+        "    <ul>\n",
+        "      <li> Data is present only for Small Arms</li>\n",
+        "      <li> We do not have much information about the timeframe for the dataset, so the data may be outdated </li>\n",
+        "      <li> Gun Homicides and Gun Ownership Data for United Kingdom and South Korea is not present</li>\n",
+        "    </ul>\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "rqcyyOcY_sbQ",
         "colab_type": "text"
       },
@@ -1586,11 +1651,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "--okCu1oJMRW",
+        "outputId": "5aed6da8-7b28-4f46-ab31-f4cc4f13cc47",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 229
-        },
-        "outputId": "cd5bf173-79d9-4e09-ed8d-7f0b5b57cfe2"
+        }
       },
       "source": [
         "world_crime = pd.read_csv(dataset_url + \"world_crime.csv\")\n",
@@ -1756,7 +1821,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "gGYZ68FGJMRl",
-        "outputId": "5cebe557-b303-4cfb-af88-fdeeea50bdb8",
+        "outputId": "630ebb57-580f-4a8e-8617-1762b110fe8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 185
@@ -1796,11 +1861,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "-v3lsNOMJMRr",
+        "outputId": "12a6d8c0-11bc-4504-ef03-fb09ff2a9f2d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d96c5513-81da-429b-d5fd-480ef86db5ef"
+        }
       },
       "source": [
         "# Removing all the 'NA' values\n",
@@ -1849,7 +1914,7 @@
         "developed_countries = pd.read_csv(dataset_url+\"developed.csv\")\n",
         "developed_countries.head()"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1957,7 +2022,7 @@
         "# Checking for NAs\n",
         "developed_countries.isna().sum()"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2020,16 +2085,16 @@
       "metadata": {
         "id": "0ys11zET_sbp",
         "colab_type": "code",
+        "outputId": "59a8d31d-8077-489b-e325-d9f5b5f28759",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        },
-        "outputId": "59a8d31d-8077-489b-e325-d9f5b5f28759"
+        }
       },
       "source": [
         "world_crime_developed.head()"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2179,16 +2244,16 @@
         "scrolled": true,
         "id": "rL8b2zF2_sbu",
         "colab_type": "code",
+        "outputId": "dec47f27-584e-455f-a14f-97d8fc884b72",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        },
-        "outputId": "dec47f27-584e-455f-a14f-97d8fc884b72"
+        }
       },
       "source": [
         "world_crime_developed.sort_values(by = 'rank-rate_owner')[:5]"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2317,16 +2382,16 @@
       "metadata": {
         "id": "bKtkl-gX_sbw",
         "colab_type": "code",
+        "outputId": "cf1bf52b-01f2-4c25-a9f1-b08f6610926e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        },
-        "outputId": "cf1bf52b-01f2-4c25-a9f1-b08f6610926e"
+        }
       },
       "source": [
         "world_crime_developed.sort_values(by = 'avg_tot_all_guns', ascending = False)[:5]"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2482,6 +2547,16 @@
       },
       "source": [
         "*** "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Bi1Yp3VVM2ID",
+        "colab_type": "text"
+      },
+      "source": [
+        "## References"
       ]
     }
   ]
