--- a/Gun_Violence_in_the_United_States.ipynb
+++ b/Gun_Violence_in_the_United_States.ipynb
@@ -90,7 +90,6 @@
         "id": "JfaXGyAKyBph"
       },
       "source": [
-        "### Introduction\n",
         "According to an article in New York Times, \"*More people died from firearm injuries in the United States in 2017 than in any other year since at least 1968, according to new data from the Centers for Disease Control and Prevention*.\" (Ref: https://www.nytimes.com/2018/12/18/us/gun-deaths.html).\n",
         "\n",
         "In fact, 2017 witnessed the highest number of mass shootings alone, killing and injuring hundreds of innocent lives. To understand the seriousness of the situation, we plan to visualize each of the mass shooting incidents on the map of the United States.   "
@@ -1903,7 +1902,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "cm7ubnEpJMRx",
-        "outputId": "5337f1ac-e92c-4305-c420-fcb5abf28e6b",
+        "outputId": "a52b1981-8588-44b1-d3b2-7783e79732cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -1914,7 +1913,7 @@
         "developed_countries = pd.read_csv(dataset_url+\"developed.csv\")\n",
         "developed_countries.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2011,7 +2010,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "9Jw4a_7TJMR0",
-        "outputId": "3139bb22-2058-4df7-8df0-341b24c889e2",
+        "outputId": "ea2efc08-3871-4f98-85ca-6184e7dbc9bb",
         "scrolled": true,
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -2022,7 +2021,7 @@
         "# Checking for NAs\n",
         "developed_countries.isna().sum()"
       ],
-      "execution_count": 0,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2085,7 +2084,7 @@
       "metadata": {
         "id": "0ys11zET_sbp",
         "colab_type": "code",
-        "outputId": "59a8d31d-8077-489b-e325-d9f5b5f28759",
+        "outputId": "8c57a744-0b99-4e8d-933b-98d124696aee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -2094,7 +2093,7 @@
       "source": [
         "world_crime_developed.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2244,7 +2243,7 @@
         "scrolled": true,
         "id": "rL8b2zF2_sbu",
         "colab_type": "code",
-        "outputId": "dec47f27-584e-455f-a14f-97d8fc884b72",
+        "outputId": "4f197070-8050-4134-86fe-f2da89a1cc61",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -2253,7 +2252,7 @@
       "source": [
         "world_crime_developed.sort_values(by = 'rank-rate_owner')[:5]"
       ],
-      "execution_count": 0,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2382,7 +2381,7 @@
       "metadata": {
         "id": "bKtkl-gX_sbw",
         "colab_type": "code",
-        "outputId": "cf1bf52b-01f2-4c25-a9f1-b08f6610926e",
+        "outputId": "36033a56-cfd8-4fb8-8ab7-220e5d3e3bde",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
@@ -2391,7 +2390,7 @@
       "source": [
         "world_crime_developed.sort_values(by = 'avg_tot_all_guns', ascending = False)[:5]"
       ],
-      "execution_count": 0,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2556,7 +2555,25 @@
         "colab_type": "text"
       },
       "source": [
-        "## References"
+        "## References\n",
+        "\n",
+        "* America’s unique gun violence problem, explained in 17 maps and charts \n",
+        "https://www.vox.com/policy-and-politics/2017/10/2/16399418/us-gun-violence-statistics-maps-charts\n",
+        "\n",
+        "* Gun homicides and gun ownership listed by country \n",
+        "https://www.theguardian.com/news/datablog/2012/jul/22/gun-homicides-ownership-world-list#data\n",
+        "\n",
+        "* Developed Countries 2019\n",
+        "http://worldpopulationreview.com/countries/developed-countries/\n",
+        "\n",
+        "* Gun Violence Archive (GVA) \n",
+        "https://www.gunviolencearchive.org/\n",
+        "\n",
+        "* 1000 Largest US Cities By Population With Geographic Coordinates\n",
+        "https://public.opendatasoft.com/explore/dataset/1000-largest-us-cities-by-population-with-geographic-coordinates/table/?sort=-rank\n",
+        "\n",
+        "* Harvard Injury Control Research Center\n",
+        "https://www.hsph.harvard.edu/hicrc/firearms-research/guns-and-death/"
       ]
     }
   ]
