--- a/Gun_Violence_in_the_United_States.ipynb
+++ b/Gun_Violence_in_the_United_States.ipynb
@@ -103,7 +103,8 @@
       },
       "source": [
         "### Datasets and Sources\n",
-        "**1. Mass Shootings Data from Gun Violence Archive**: The dataset consists of gun violence incidents collected from Jan 01, 2013 to May 18, 2019. Each row of the dataset represents an incident in the United States with details regarding the incident location and number of people killed and injured. Source: https://www.gunviolencearchive.org/\n",
+        "\n",
+        "**1.  Mass Shootings Data from Gun Violence Archive**: The dataset consists of gun violence incidents collected from Jan 01, 2013 to May 18, 2019. Each row of the dataset represents an incident in the United States with details regarding the incident location and number of people killed and injured. Source: https://www.gunviolencearchive.org/\n",
         "\n",
         "**2. City Locations Data from Opensoft**: The dataset consists of US cities and their geographical locations. Each row represents a city and its geographical coordinates and details like population, timezone, etc. Source: https://public.opendatasoft.com/explore/dataset/1000-largest-us-cities-by-population-with-geographic-coordinates/table/?sort=-rank\n",
         "\n",
@@ -117,7 +118,10 @@
         "      <li><i>num_Injured</i>: Number of people injured in the mass shooting incident</li>\n",
         "      <li><i>Latitude</i>: Latitude of the given city</li>\n",
         "      <li><i>Longitude</i>: Longitude of the given city</li>\n",
-        "    </ul>"
+        "    </ul>\n",
+        "    \n",
+        "**Limitations**\n",
+        "* City Locations Dataset has geolocations only for 1000 largest US cities based on population, so we lose the mass shootings information about some of the smaller cities\n"
       ]
     },
     {
@@ -198,7 +202,7 @@
         "mass_shoot = pd.concat([y2013, y2014, y2015, y2016, y2017, y2018, y2019])\n",
         "mass_shoot.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -381,7 +385,7 @@
         "cities_location_sub = cities_location[['city','state_id', 'state_name','lat', 'lng']]\n",
         "cities_location_sub.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -526,7 +530,7 @@
         "# Checking number of rows in the combined dataframe\n",
         "len(mass_shooting_data)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -567,7 +571,7 @@
       "source": [
         "mass_shooting_data.head()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -726,7 +730,7 @@
         "mass_shooting_data.groupby('Year')['num_Killed'].sum()\\\n",
         ".reset_index().sort_values(by= 'num_Killed', ascending = False) "
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -837,7 +841,7 @@
         "mass_shooting_data.groupby('City')['num_Killed','num_Injured'].sum()\\\n",
         ".reset_index().sort_values(by= 'num_Killed', ascending = False)[:5]                      "
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -931,7 +935,7 @@
       "source": [
         "mass_shooting_data.groupby('State')['num_Killed','num_Injured'].agg(['sum','count','mean','max'])"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1660,7 +1664,7 @@
         "world_crime = pd.read_csv(dataset_url + \"world_crime.csv\")\n",
         "world_crime.head()"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1830,7 +1834,7 @@
         "#Checking columns with 'NA' values\n",
         "world_crime.isna().sum()"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1871,7 +1875,7 @@
         "world_crime = world_crime.dropna()\n",
         "len(world_crime)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1913,7 +1917,7 @@
         "developed_countries = pd.read_csv(dataset_url+\"developed.csv\")\n",
         "developed_countries.head()"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2021,7 +2025,7 @@
         "# Checking for NAs\n",
         "developed_countries.isna().sum()"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2093,7 +2097,7 @@
       "source": [
         "world_crime_developed.head()"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2252,7 +2256,7 @@
       "source": [
         "world_crime_developed.sort_values(by = 'rank-rate_owner')[:5]"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2390,7 +2394,7 @@
       "source": [
         "world_crime_developed.sort_values(by = 'avg_tot_all_guns', ascending = False)[:5]"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
