--- a/Gun_Violence_in_the_United_States.ipynb
+++ b/Gun_Violence_in_the_United_States.ipynb
@@ -140,6 +140,20 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XXZLwcC0lc3V",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from IPython.core.interactiveshell import InteractiveShell\n",
+        "InteractiveShell.ast_node_interactivity = \"all\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
@@ -2560,7 +2574,10 @@
         "colab_type": "text"
       },
       "source": [
-        "Inroduction"
+        "On average 10 out of every 100,000 people are killed by firearms across the United States (Ref: https://www.theatlantic.com/national/archive/2011/01/the-geography-of-gun-deaths/69354/). \n",
+        "\n",
+        "But social factors like stress,mental illness,increase in populations and immigrants have no relation with gun related deaths\n",
+        "(Ref: https://www.vox.com/policy-and-politics/2017/10/2/16399418/us-gun-violence-statistics-maps-charts). But there is scope for gun laws being in place to actually decrease deaths due to firearms."
       ]
     },
     {
@@ -2571,7 +2588,7 @@
       },
       "source": [
         "### Datasets and Sources\n",
-        "**1. Firearm Child Protection**: The dataset consists of details of states with firearm laws designed to protect children. Each row represents the whether Child Access Prevention Firearm Law, Safe Storage Gun Lock Requirment and Assault Weapons Ban is present or not. Source: https://www.kff.org/other/state-indicator/firearms-and-children-legislation/?currentTimeframe=0&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D\n",
+        "**1. Firearms Child Protection**: The dataset consists of details of states with firearm laws designed to protect children. Each row represents the whether Child Access Prevention Firearm Law, Safe Storage Gun Lock Requirment and Assault Weapons Ban is present or not. Source: https://www.kff.org/other/state-indicator/firearms-and-children-legislation/?currentTimeframe=0&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D\n",
         "\n",
         "**2. Firearms Deaths**: The dataset consists number of deaths due to injury by firearms per 100,000 population in each state. Source: https://www.kff.org/other/state-indicator/firearms-death-rate-per-100000/?currentTimeframe=3&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D\n",
         "\n",
@@ -2607,9 +2624,7 @@
       },
       "source": [
         "The dataset needs some processing before we start exploring and visualizing the dataset further. Steps to be followed are:\n",
-        "- Renaming column names for efficient data handling\n",
-        "- Handling Null values\n",
-        "- Merging with the list of developed countries"
+        "- Merging with the  Firearms Deaths data with  Firearm Child Protection"
       ]
     },
     {
@@ -2619,22 +2634,8 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "Step 1: Reading  the datset for firearms and child protection"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XXZLwcC0lc3V",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from IPython.core.interactiveshell import InteractiveShell\n",
-        "InteractiveShell.ast_node_interactivity = \"all\""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2648,6 +2649,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CX4kGFBipWOv",
+        "colab_type": "text"
+      },
+      "source": [
+        "Step 2: Removing columns for efficient data handling"
+      ]
     },
     {
       "cell_type": "code",
@@ -3062,19 +3073,6 @@
           "execution_count": 19
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "he3a8vdtmLP0",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
