--- a/Gun_Violence_in_the_United_States.ipynb
+++ b/Gun_Violence_in_the_United_States.ipynb
@@ -2603,7 +2603,8 @@
         "    \n",
         " **Limitations**\n",
         " *  Firearms Child Protection dataset is only present for 2014 so the analysis is done only on 2014 data. Some states might have implemented laws which could not be captured\n",
-        " * State laws applies to assault pistols only"
+        " * State laws applies to assault pistols only\n",
+        " * Deaths from injury due to firearms excludes deaths due to explosives and other causes indirectly caused by firearms."
       ]
     },
     {
@@ -2645,7 +2646,7 @@
         "colab": {}
       },
       "source": [
-        "firearm_child_protection = pd.read_csv(dataset_url + 'firearm_children.csv', skiprows = 2)\n"
+        "firearm_child_protection = pd.read_csv(dataset_url + 'firearm_children.csv', skiprows = 2)"
       ],
       "execution_count": 0,
       "outputs": []
