--- a/Gun_Violence_in_the_United_States.ipynb
+++ b/Gun_Violence_in_the_United_States.ipynb
@@ -2658,7 +2658,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Step 2: Removing columns for efficient data handling"
+        "Step 2: Removing columns and rows that are not required for the analysis"
       ]
     },
     {
@@ -2676,6 +2676,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "r-kuA8gDsZF5",
+        "colab_type": "text"
+      },
+      "source": [
+        "Step 3: Reading  the datset for firearms and death rate"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "FI1NKQ-7le8O",
@@ -2689,6 +2699,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MFc_tmKrr74M",
+        "colab_type": "text"
+      },
+      "source": [
+        "Step 4: Removing columns and rows that are not required for the analysis"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "GPjU63eplfCF",
@@ -2696,10 +2716,21 @@
         "colab": {}
       },
       "source": [
+        "firearm_death= firearm_death[~(firearm_death.Location == 'United States')]\n",
         "firearm_death= firearm_death[~(firearm_death.Location == 'United States')]"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mh0iRhICsogx",
+        "colab_type": "text"
+      },
+      "source": [
+        "Step 5: Merging firearms child protection with firearms death data using inner join on state as we need information from both the datasets for our analysis"
+      ]
     },
     {
       "cell_type": "code",
@@ -2709,11 +2740,20 @@
         "colab": {}
       },
       "source": [
-        "# Merging world crimes and growth rates dataset\n",
         "firearm_statelaws_child_protection = firearm_death.merge(firearm_child_protection, how=\"inner\", left_on=\"Location\", right_on=\"Location\")"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xhJigKuGtOlC",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
     },
     {
       "cell_type": "code",
