--- a/Gun_Violence_in_the_United_States.ipynb
+++ b/Gun_Violence_in_the_United_States.ipynb
@@ -1657,6 +1657,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "LSLJhQ6GyOWE",
+        "colab_type": "text"
+      },
+      "source": [
+        "The dataset needs some processing before we start exploring and visualizing the dataset further. Steps to be followed are:\n",
+        "- Renaming column names for efficient data handling\n",
+        "- Handling Null values\n",
+        "- Merging with the list of developed countries"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "FrvXhVT6_sbV",
         "colab_type": "text"
       },
