--- a/Gun_Violence_in_the_United_States.ipynb
+++ b/Gun_Violence_in_the_United_States.ipynb
@@ -3231,7 +3231,13 @@
         "https://public.opendatasoft.com/explore/dataset/1000-largest-us-cities-by-population-with-geographic-coordinates/table/?sort=-rank\n",
         "\n",
         "* Harvard Injury Control Research Center\n",
-        "https://www.hsph.harvard.edu/hicrc/firearms-research/guns-and-death/"
+        "https://www.hsph.harvard.edu/hicrc/firearms-research/guns-and-death/\n",
+        "\n",
+        "* States with Firearm Laws Designed to Protect Children\n",
+        "https://www.kff.org/other/state-indicator/firearms-and-children-legislation/?currentTimeframe=0&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D\n",
+        "\n",
+        "* Number of Deaths Due to Injury by Firearms per 100,000 Population\n",
+        "https://www.kff.org/other/state-indicator/firearms-death-rate-per-100000/?currentTimeframe=3&sortModel=%7B%22colId%22:%22Location%22,%22sort%22:%22asc%22%7D"
       ]
     }
   ]
