--- a/Gun_Violence_in_the_United_States.ipynb
+++ b/Gun_Violence_in_the_United_States.ipynb
@@ -217,7 +217,7 @@
         "mass_shoot = pd.concat([y2013, y2014, y2015, y2016, y2017, y2018, y2019])\n",
         "mass_shoot.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -400,7 +400,7 @@
         "cities_location_sub = cities_location[['city','state_id', 'state_name','lat', 'lng']]\n",
         "cities_location_sub.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -545,7 +545,7 @@
         "# Checking number of rows in the combined dataframe\n",
         "len(mass_shooting_data)"
       ],
-      "execution_count": 0,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -586,7 +586,7 @@
       "source": [
         "mass_shooting_data.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -745,7 +745,7 @@
         "mass_shooting_data.groupby('Year')['num_Killed'].sum()\\\n",
         ".reset_index().sort_values(by= 'num_Killed', ascending = False) "
       ],
-      "execution_count": 0,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -856,7 +856,7 @@
         "mass_shooting_data.groupby('City')['num_Killed','num_Injured'].sum()\\\n",
         ".reset_index().sort_values(by= 'num_Killed', ascending = False)[:5]                      "
       ],
-      "execution_count": 0,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -950,7 +950,7 @@
       "source": [
         "mass_shooting_data.groupby('State')['num_Killed','num_Injured'].agg(['sum','count','mean','max'])"
       ],
-      "execution_count": 0,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1692,7 +1692,7 @@
         "world_crime = pd.read_csv(dataset_url + \"world_crime.csv\")\n",
         "world_crime.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1862,7 +1862,7 @@
         "#Checking columns with 'NA' values\n",
         "world_crime.isna().sum()"
       ],
-      "execution_count": 0,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1903,7 +1903,7 @@
         "world_crime = world_crime.dropna()\n",
         "len(world_crime)"
       ],
-      "execution_count": 0,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1945,7 +1945,7 @@
         "developed_countries = pd.read_csv(dataset_url+\"developed.csv\")\n",
         "developed_countries.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2053,7 +2053,7 @@
         "# Checking for NAs\n",
         "developed_countries.isna().sum()"
       ],
-      "execution_count": 0,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2125,7 +2125,7 @@
       "source": [
         "world_crime_developed.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2284,7 +2284,7 @@
       "source": [
         "world_crime_developed.sort_values(by = 'rank-rate_owner')[:5]"
       ],
-      "execution_count": 0,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2422,7 +2422,7 @@
       "source": [
         "world_crime_developed.sort_values(by = 'avg_tot_all_guns', ascending = False)[:5]"
       ],
-      "execution_count": 0,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2587,7 +2587,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Sonal - On average 10 out of every 100,000 people are killed by firearms across the United States (Ref: https://www.theatlantic.com/national/archive/2011/01/the-geography-of-gun-deaths/69354/). \n",
+        "On average 10 out of every 100,000 people are killed by firearms across the United States (Ref: https://www.theatlantic.com/national/archive/2011/01/the-geography-of-gun-deaths/69354/). \n",
         "\n",
         "But social factors like stress,mental illness,increase in populations and immigrants have no relation with gun related deaths\n",
         "(Ref: https://www.vox.com/policy-and-politics/2017/10/2/16399418/us-gun-violence-statistics-maps-charts). But there is scope for gun laws being in place to actually decrease deaths due to firearms."
@@ -2715,21 +2715,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "gh_vzwACxk51",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "firearm_child_protection['atleast_1_law']=((firearm_child_protection['Child Access Prevention Firearm Law']=='Yes')|\n",
-        "                                                    (firearm_child_protection['Safe Storage or Gun Lock Requirment']=='Yes')|\n",
-        "                                                    (firearm_child_protection['Assault Weapons Ban']=='Yes'))*1"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "r-kuA8gDsZF5",
@@ -2814,16 +2799,16 @@
       "metadata": {
         "id": "5CADch-il_g3",
         "colab_type": "code",
-        "outputId": "9f5990c9-170f-4cb3-caf7-0679f14d5730",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 195
-        }
+        },
+        "outputId": "9f5990c9-170f-4cb3-caf7-0679f14d5730"
       },
       "source": [
         "firearm_statelaws_child_protection.head()"
       ],
-      "execution_count": 0,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2948,11 +2933,11 @@
       "metadata": {
         "id": "WAFX-eVkmGS9",
         "colab_type": "code",
-        "outputId": "d85bfd08-7886-4952-9501-acc693e4e8c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 494
-        }
+        },
+        "outputId": "d85bfd08-7886-4952-9501-acc693e4e8c9"
       },
       "source": [
         "firearm_statelaws_child_protection.groupby('Child Access Prevention Firearm Law')['Firearms Death Rate per 100,000'].agg(['mean'])\n",
@@ -2960,7 +2945,7 @@
         "firearm_statelaws_child_protection.groupby('Assault Weapons Ban')['Firearms Death Rate per 100,000'].agg(['mean'])\n",
         "firearm_statelaws_child_protection.groupby('atleast_1_law')['Firearms Death Rate per 100,000'].agg(['mean'])"
       ],
-      "execution_count": 0,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "execute_result",
