--- a/Gun_Violence_in_the_United_States.ipynb
+++ b/Gun_Violence_in_the_United_States.ipynb
@@ -2707,9 +2707,9 @@
         "colab": {}
       },
       "source": [
-        "firearm_statelaws_child_protection['atleast_1_law']=((firearm_statelaws_child_protection['Child Access Prevention Firearm Law']=='Yes')|\n",
-        "                                                    (firearm_statelaws_child_protection['Safe Storage or Gun Lock Requirment']=='Yes')|\n",
-        "                                                    (firearm_statelaws_child_protection['Assault Weapons Ban']=='Yes'))*1"
+        "firearm_child_protection['atleast_1_law']=((firearm_child_protection['Child Access Prevention Firearm Law']=='Yes')|\n",
+        "                                                    (firearm_child_protection['Safe Storage or Gun Lock Requirment']=='Yes')|\n",
+        "                                                    (firearm_child_protection['Assault Weapons Ban']=='Yes'))*1"
       ],
       "execution_count": 0,
       "outputs": []
@@ -2803,12 +2803,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 195
         },
-        "outputId": "9f5990c9-170f-4cb3-caf7-0679f14d5730"
+        "outputId": "757e421f-83f4-4b21-e8f4-4de4925cab46"
       },
       "source": [
         "firearm_statelaws_child_protection.head()"
       ],
-      "execution_count": 71,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2837,7 +2837,6 @@
               "      <th>Child Access Prevention Firearm Law</th>\n",
               "      <th>Safe Storage or Gun Lock Requirment</th>\n",
               "      <th>Assault Weapons Ban</th>\n",
-              "      <th>atleast_1_law</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -2848,7 +2847,6 @@
               "      <td>No</td>\n",
               "      <td>No</td>\n",
               "      <td>No</td>\n",
-              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -2857,7 +2855,6 @@
               "      <td>No</td>\n",
               "      <td>No</td>\n",
               "      <td>No</td>\n",
-              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -2866,7 +2863,6 @@
               "      <td>No</td>\n",
               "      <td>No</td>\n",
               "      <td>No</td>\n",
-              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -2875,7 +2871,6 @@
               "      <td>No</td>\n",
               "      <td>No</td>\n",
               "      <td>No</td>\n",
-              "      <td>0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -2884,27 +2879,26 @@
               "      <td>Yes</td>\n",
               "      <td>Yes</td>\n",
               "      <td>Yes</td>\n",
-              "      <td>1</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "     Location  ...  atleast_1_law\n",
-              "0     Alabama  ...              0\n",
-              "1      Alaska  ...              0\n",
-              "2     Arizona  ...              0\n",
-              "3    Arkansas  ...              0\n",
-              "4  California  ...              1\n",
+              "     Location  ...  Assault Weapons Ban\n",
+              "0     Alabama  ...                   No\n",
+              "1      Alaska  ...                   No\n",
+              "2     Arizona  ...                   No\n",
+              "3    Arkansas  ...                   No\n",
+              "4  California  ...                  Yes\n",
               "\n",
-              "[5 rows x 6 columns]"
+              "[5 rows x 5 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 71
+          "execution_count": 81
         }
       ]
     },
